# dotfiles

./: .gitattributes  .gitignore  README.md
.opencode/: ARCHITECTURE.md  ECC.md  README.md  install.ps1  install.sh  opencode.json  package-lock.json  package.json
.ulis/: README.md  commands.yaml  config.yaml  mcp.yaml  skills.yaml
alacritty/: alacritty.toml  alacritty.yml  install.bat
apple/: README.md
bash/: .bashrc  gff-all
bun/: install.txt
chocolatey/: README.md  install.bat  packages.txt
cursor/: README.md  extensions.txt  keybindings.json  mcp.json  settings.json
fedora/: README.md  backup.sh  flatpak_apps.txt  gnome_settings_backup.txt  restore.sh  setup.sh
fish/: config.fish
ghostty/: config
install/: install.bat
node/: packages.txt
omarchy/: .bashrc  README.md  install.sh  pkg-list.txt  sudoers-touchpad-toggle
opencode/: AGENTS.md  ARCHITECTURE.md  GLOSSARY.md  INDEX.md  INTEGRATION.md  PATTERNS.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  gsd-file-manifest.json  opencode.json
opencode/rlm/: README.md  pyproject.toml
opencode/rlm/opencode_rlm/: __init__.py  __main__.py  prompts.py  run.py
powerShell/: Microsoft.PowerShell_profile.ps1  Profile.ps1  install.bat
reg/: add_PowerShell_7_context_menu.reg  add_alacritty_to_context_menu.reg
starship/: starship.toml
ulauncher/: settings.json  shortcuts.json
vm/: install.sh  open_code_on_the_go_setup_guide.md
vscode/: extensions.json  global.code-snippets  settings.json  typescript.code-snippets  typescriptreact.code-snippets
windows/: Profile.ps1  README.md  choco.txt  (+4 more)
(+215 files in other folders)
